[package]
name = "anvil"
version = "0.1.0"
authors = ["navin"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "master"
path = "src/master.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"

[dependencies]
reqwest = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
etcd = "0.9.0"
tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

[build-dependencies]
tonic-build = "0.1.1"
prost-build = "0.6.1"
